sfdx-project/force-app/main/default/objects/Signal__c/Signal__c.object-meta.xml
<CustomObject>
    <description>A discrete, dated, sourced event indicating a company is approaching Phase I clinical development.</description>
    <label>Signal</label>
    <nameField>
        <displayFormat>SIG-{0000}</displayFormat>
        <label>Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>