sfdx-project/force-app/main/default/objects/Signal__c/fields/Classification_Source__c.field-meta.xml
<CustomField>
    <fullName>Classification_Source__c</fullName>
    <label>Classification Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Worker - Deterministic</fullName><default>true</default><label>Worker - Deterministic</label></value>
            <value><fullName>Agentforce - AI Classified</fullName><default>false</default><label>Agentforce - AI Classified</label></value>
            <value><fullName>Human</fullName><default>false</default><label>Human</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>