sfdx-project/force-app/main/default/objects/Signal__c/fields/Dedupe_Hash__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Hash__c</fullName>
    <externalId>true</externalId>
    <label>Dedupe Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>