sfdx-project/force-app/main/default/objects/Signal__c/fields/Modality__c.field-meta.xml
<CustomField>
    <fullName>Modality__c</fullName>
    <label>Modality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Small molecule</fullName><default>false</default><label>Small molecule</label></value>
            <value><fullName>ADC</fullName><default>false</default><label>ADC</label></value>
            <value><fullName>Peptide</fullName><default>false</default><label>Peptide</label></value>
            <value><fullName>Oligonucleotide</fullName><default>false</default><label>Oligonucleotide</label></value>
            <value><fullName>Biosimilar</fullName><default>false</default><label>Biosimilar</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
            <value><fullName>Unknown</fullName><default>true</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>