sfdx-project/force-app/main/default/objects/Signal__c/fields/Phase_I_Readiness_Weight__c.field-meta.xml
<CustomField>
    <fullName>Phase_I_Readiness_Weight__c</fullName>
    <label>Phase I Readiness Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>