sfdx-project/force-app/main/default/objects/Signal__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Signals</relationshipLabel>
    <relationshipName>Reviewed_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>