sfdx-project/force-app/main/default/objects/Signal__c/fields/Signal_Date__c.field-meta.xml
<CustomField>
    <fullName>Signal_Date__c</fullName>
    <label>Signal Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>