sfdx-project/force-app/main/default/objects/Signal__c/fields/Signal_Summary__c.field-meta.xml
<CustomField>
    <fullName>Signal_Summary__c</fullName>
    <label>Signal Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>