sfdx-project/force-app/main/default/objects/Signal__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <referenceTo>Source__c</referenceTo>
    <relationshipLabel>Signals</relationshipLabel>
    <relationshipName>Signals</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>