sfdx-project/force-app/main/default/objects/Signal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Reviewed</fullName><default>false</default><label>Reviewed</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Archived</fullName><default>false</default><label>Archived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>