sfdx-project/force-app/main/default/objects/Signal__c/fields/Target_Company__c.field-meta.xml
<CustomField>
    <fullName>Target_Company__c</fullName>
    <label>Target Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Signals</relationshipLabel>
    <relationshipName>Signals</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>